Lot of changes made...  - Prod profile added for Maven, lambda adapter added as dependency  - Dynamo table improved, previous prefixes removed  - Bruno tests improved